css/style-mobile-screen.css
/* ... */
.project-popuop-description p {
  font-weight: 400;
  font-size: 15px;
  line-height: 24px;
  color: #344563;
  flex: none;
  order: 0;
  text-align: justify;
}

.project-popup-tecnologies {
  display: flex;
  flex-direction: column;
}

.project-popup-action {
  display: flex;
  flex-direction: row;
  justify-content: center;
  width: 320px;
  height: 56px;
  margin: 10px 0;
  order: 2;
}

.btn-see-source {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 10px;
  width: 142px;
  height: 40px;
  left: 5px;
  bottom: 16px;
  border: 1px solid #6070ff;
  border-radius: 8px;
}

.btn-see-source span {
  font-weight: 500;
  font-size: 15px;
  line-height: 20px;
  flex: none;
  order: 0;
  flex-grow: 0;
}

.btn-see-live {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 10px;
  width: 130px;
  height: 40px;
  left: 5px;
  bottom: 16px;
  border: 1px solid #6070ff;
  border-radius: 8px;
  margin: 0 15px;
}

.btn-see-live span {
  font-weight: 500;
  font-size: 15px;
  line-height: 20px;
  flex: none;
  order: 0;
  flex-grow: 0;
}

#about {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 100px 0;
  gap: 24px;
  width: 375px;
  height: 920px;
  left: calc(50% - 375px / 2);
  top: 3506px;
  order: 2;
}

#top {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 0;
  gap: 12px;
  width: 327px;
  height: 409px;
}

.about-title {
  width: 327px;
  height: 60px;
  font-style: normal;
  font-weight: 700;
  font-size: 40px;
  line-height: 52px;
  display: flex;
  align-items: center;
  color: #172b4d;
  flex: none;
  order: 0;
  flex-grow: 0;
  margin: 0;
}

.about-text {
  width: 327px;
  height: 144px;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  color: #344563;
  flex: none;
  order: 1;
  flex-grow: 0;
  text-align: justify;
  margin: 0;
}

.about-social-media {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 0;
  gap: 16px;
  width: 200px;
  height: 80px;
  flex: none;
  order: 2;
  flex-grow: 0;
}

.supporting-text {
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 0;
  gap: 8px;
  width: 150px;
  height: 24px;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  color: #7f8cff;
  flex: none;
  order: 0;
  flex-grow: 0;
}

.btn-get-resume-frame {
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 12px;
  gap: 10px;
  width: 162px;
  height: 48px;
  border: 1px solid #6070ff;
  border-radius: 8px;
  flex: none;
  order: 3;
  flex-grow: 0;
}

#btn-get-resume {
  flex-direction: row;
  padding: 12px;
  gap: 10px;
  width: 162px;
  height: 48px;
  border: 1px solid #6070ff;
  border-radius: 8px;
  font-weight: 500;
  font-size: 17px;
  line-height: 24px;
  display: flex;
  align-items: center;
  text-align: center;
  letter-spacing: 0.03em;
  color: #396df2;
  flex: none;
  order: 3;
  flex-grow: 0;
  transition: all 0.5s;
}

.language-and-skills-frame {
  list-style: none;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 0;
  width: 327px;
  height: 464.15px;
  flex: none;
  order: 1;
  flex-grow: 0;
}

#skills {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 0;
  width: 327px;
  height: 320px;
  flex: none;
  order: 1;
  flex-grow: 0;
}

.languages-frame {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 0;
  width: 327px;
  height: 310px;
  flex: none;
  order: 1;
  flex-grow: 0;
}

.languages-frame-title {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  width: 327px;
  height: 72px;
}

.framework-frame-title h3 {
  height: 24px;
  left: 12px;
  right: 78px;
  top: calc(50% - 24px / 2);
  font-weight: 500;
  font-size: 20px;
  line-height: 24px;
  display: flex;
  align-items: center;
  color: #000;
}

.languages-frame-title h3 {
  height: 24px;
  left: 12px;
  right: 78px;
  top: calc(50% - 24px / 2);
  font-weight: 500;
  font-size: 20px;
  line-height: 24px;
  display: flex;
  align-items: center;
  color: #000;
}

.languages-frame-dropdown {
  order: 1;
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  padding: 8px;
  width: 40px;
  height: 40px;
  right: 26px;
  top: calc(50% - 40px / 2);
  border-radius: 8px;
}

.language-list {
  list-style: none;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 12px;
  gap: 12px;
  width: 327px;
  height: 248.15px;
  flex: none;
  order: 1;
  flex-grow: 0;
}

.icon-language {
  width: 48px;
  height: 48px;
}

.icon-language-javascript {
  background-image: url("../img/javascript.jpg");
  background-repeat: no-repeat;
  top: calc(50% - 48px / 2 - 0.36px);
  border-radius: 8px;
  flex: 0.3;
}

.icon-language-html {
  background-image: url("../img/html.jpg");
  background-repeat: no-repeat;
  left: 12px;
  top: calc(50% - 48px / 2 - 0.36px);
  border-radius: 8px;
  flex: 0.3;
}

.icon-language-css {
  background-image: url("../img/css.jpg");
  background-repeat: no-repeat;
  width: 48px;
  height: 48px;
  left: 12px;
  top: calc(50% - 48px / 2 - 0.36px);
  border-radius: 8px;
  flex: 0.3;
}

.frameworks {
  display: flex;
  flex-direction: row;
  width: 327px;
  height: 72px;
  flex: none;
  order: 1;
  flex-grow: 0;
}

.frameworks-frame-title {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  width: 327px;
  height: 72px;
}

.framework-frame-dropdown {
  order: 1;
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  padding: 8px;
  width: 40px;
  height: 40px;
  right: 26px;
  top: calc(50% - 40px / 2);
  border-radius: 8px;
}

.habs {
  width: 327px;
  height: 72px;
  flex: none;
  order: 2;
  flex-grow: 0;
}

.habs-frame-title {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  width: 327px;
  height: 72px;
}
/* ... */

